test/corpus/blocks.txt
================================================================================
Block code directive
================================================================================
<% my $x = 1; %>
--------------------------------------------------------------------------------

(template
  (block_code))

================================================================================
Block output directive
================================================================================
<%= $x %>
--------------------------------------------------------------------------------

(template
  (block_output))

================================================================================
Block output raw directive
================================================================================
<%== $x %>
--------------------------------------------------------------------------------

(template
  (block_output_raw))

================================================================================
Block comment directive
================================================================================
<%# this is a comment %>
--------------------------------------------------------------------------------

(template
  (block_comment))

================================================================================
Content spans line directives
================================================================================
<div>
%= foo
</div>
--------------------------------------------------------------------------------

(template
  (content))

================================================================================
Content spans multiple line directives
================================================================================
<div>
%= foo
%= bar
% end
</div>
--------------------------------------------------------------------------------

(template
  (content))

================================================================================
Block directive splits content
================================================================================
<div>
<% my $x = 1; %>
</div>
--------------------------------------------------------------------------------

(template
  (content)
  (block_code)
  (content))

================================================================================
Mixed template
================================================================================
<% use URI; %>
<div class="foo">
    %= text_field 'q'
    <span></span>
% end
</div>
--------------------------------------------------------------------------------

(template
  (block_code)
  (content))
